# cowsay

./: db.sqlite3  pyproject.toml
.history/cowsay/: forms_20200220105442.py  forms_20200220105621.py  forms_20200220105624.py  forms_20200220105823.py  forms_20200220105837.py  forms_20200220105845.py  forms_20200220105902.py  forms_20200220110827.py  forms_20200220111230.py  forms_20200220111307.py  forms_20200220111328.py  forms_20200220111350.py  forms_20200220111353.py  forms_20200220121040.py  forms_20200220125822.py  forms_20200220132629.py  forms_20200220133007.py  forms_20200220133011.py  forms_20200220133015.py  forms_20200220135313.py  forms_20200220144126.py  forms_20200220150803.py  forms_20200220150829.py  forms_20200220150831.py  forms_20200220150845.py  forms_20200220151227.py  forms_20200220151232.py  forms_20200220151238.py  forms_20200220152718.py  models_20200220111150.py  models_20200220111157.py  models_20200220111202.py  models_20200220112051.py  models_20200220120212.py  models_20200220120223.py  models_20200220120228.py  models_20200220120903.py  models_20200220122515.py  models_20200220124432.py  models_20200220124443.py  (+219 more)
cowsay/: forms.py  settings.py  urls.py  views.py
cowsay/migrations/: 0001_initial.py  0002_historicalcow.py  0003_delete_historicalcow.py  0004_cow_history.py  0005_remove_cow_history.py  0006_cow_time.py  0007_cow_cow_type.py  0008_auto_20200220_1953.py  0009_auto_20200220_2009.py  0010_auto_20200220_2017.py  0011_auto_20200220_2027.py  0012_auto_20200220_2052.py
cowsay/templates/: index.html
(+21 files in other folders)
